<resources>
    <string name="app_name">Narsumku</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="motto">- Find Your Ideal Speaker -</string>
    <string name="greetings">Welcome to Narsumku! Connect with inspiring speakers and elevate your seminars to the next level.</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="app_intro">Your go-to platform for finding the perfect speaker to inspire and elevate your seminars. Join us and make every event unforgettable.</string>
    <string name="email_or_mobile_number">Email or Mobile Number</string>
    <string name="email_example">example@example.com</string>
    <string name="password">Password</string>
    <string name="password_example">Your Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="new_account">New Account</string>
    <string name="full_name">Full Name</string>
    <string name="name_example">Your full name here</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_example">08××××××××××</string>
    <string name="date_of_birth">DD / MM / YYYY</string>
    <string name="have_account">Already have an account?</string>
    <string name="by_continue">By continuing, you agree to</string>
    <string name="terms">Terms of Use</string>
    <string name="and">and</string>
    <string name="policy">Privacy Policy.</string>
    <string name="hi">Hi, Welcome Back</string>
    <string name="username">Username</string>
    <string name="speakers">Speakers</string>
    <string name="favorite">Favorite</string>
    <string name="searchbar_hint">Enter word</string>
    <string name="date">Date of Birth</string>
    <string name="success_title">Yeah!</string>
    <string name="error_title">Oops!</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_chat">Chat</string>
    <string name="subs">Subscription</string>
    <string name="profile_image_description">Profile Photo</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="update">Update</string>
    <string name="summary_not_set">Summary for this speaker is not set yet</string>
    <string name="back_button">Back Button</string>
    <string name="choose_preferences">Choose Your Preferences</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="politics">Politics</string>
    <string name="sport">Sport</string>
    <string name="tech">Tech</string>
    <string name="healthcare">Healthcare</string>
    <string name="academic">Academic</string>
    <string name="media_and_news"><![CDATA[Media & News]]></string>
    <string name="set_preferences">Set Preferences</string>
    <string name="already_preferences">Already set your preferences?</string>
    <string name="go_to_home">Go to Home</string>
    <string name="search_results">Search Results</string>
    <string name="button_favorite">Button Favorite</string>
    <string name="button_share">Button Share</string>
    <string name="headline">Headline</string>
    <string name="summary">Summary</string>
    <string name="recent_experience">Experienced in the field for:</string>
    <string name="recent_experience_value">\?\?\? Years</string>
    <string name="experience">Experience:</string>
    <string name="experience_value">Experience</string>
    <string name="category">Category:</string>
    <string name="category_value">{$category1\n$category2\ncategory3}</string>
    <string name="unlock_feature">Unlock this feature with a subscription</string>
    <string name="favorite_speaker">Most Favorite Speaker</string>
    <string name="recommended_speaker">Recommended Speaker</string>
    <string name="search_speaker">Search Speaker</string>
    <string name="speaker_name">Speaker Name</string>
    <string name="rating">Rating</string>
    <string name="field">Field</string>
    <string name="no_favorites">You haven\'t added favorite yet.</string>
    <string name="password_too_short">Password must be at least 8 characters long</string>
    <string name="invalid_email_format">Invalid email format!</string>
    <string name="error_empty_name">Name cannot be empty</string>
    <string name="error_empty_email">Email cannot be empty!</string>
</resources>